--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    border: none;
 }
 html {
     box-sizing: border-box;
@@ -103,6 +104,7 @@ body {
                 height: 500px;
                 display: inline-block;
                 float: right;
+                background: #FFFFFF;
             }
                 #rect_2 {
                     width: 560px;
@@ -118,3 +120,38 @@ body {
                     vertical-align: middle;
                     display: table-cell;
                 }
+                .contacts {
+                    width: 320.18px;
+                    height: 172px;
+                    margin: 50px auto;
+                    /* border: 1px solid red; */
+                }
+                    input {
+                        width: 320px;
+                        height: 50px;
+                        cursor: text;
+                        background: #F8F8F8;
+                        border: 1px solid #E4E4E4;
+                        border-radius: 5px;
+                        padding-left: 20px;
+
+                        font-size: 14px;
+                        font-weight: 600;
+
+                        /* opacity: 0.3; */
+                    }
+                        /* input[value] {
+                            opacity: 0.2;
+                        } */
+
+                    .font_2 {
+                        font-size: 12px;
+                        font-weight: 800;
+                    }
+
+                        /* [value] {
+                            opacity: 0.2;
+                        } */
+                        .font_2 > * {
+                            color: green;
+                        }
