--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
 }
-html {
+/* html {
     box-sizing: border-box;
 }
 *, *::before, *::after {
     box-sizing: inherit;
-}
+} */
 
 body {
     font-family: Montserrat;
@@ -91,7 +92,7 @@ body {
             .left {
                 width: 560px;
                 height: 500px;
-                display: inline-block;
+                display: block;
                 z-index: -9000;
 
                 background: linear-gradient(180deg, #428A60 0%, #35734F 100%);
@@ -102,7 +103,7 @@ body {
                 border: 1px solid blue;
                 width: 560px;
                 height: 500px;
-                display: inline-block;
+                display: flex;
                 float: right;
                 background: #FFFFFF;
             }
@@ -111,19 +112,20 @@ body {
                     height: 136px;
                     left: 640px;
                     top: 75px;
-
+                    margin: auto;
                     background: #F8F8F8;
                     border-radius: 30px;
                     font-weight: 800;
                     font-size: 30px;
                     text-align: center;
-                    vertical-align: middle;
+                    align-items: center
                     display: table-cell;
                 }
                 .contacts {
                     width: 320.18px;
                     height: 172px;
                     margin: 50px auto;
+                    display: block;
                     /* border: 1px solid red; */
                 }
                     input {
