--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,35 @@ body {
                             border: 1px solid rgba(228,228,228,1);
                             border-radius: 5px;
                         }
-
+                            .inp_2 {
+                                width: 184px;
+                            }
+                            .language {
+                                margin-left: 20px;
+                                width: 112px;
+                                height: 50px;
+                                font-weight: 600;
+                                font-size: 14px;
+                            }
+                            .ru {
+                                background: url('../img/russia.png') no-repeat;
+                                background-size: 20px;
+                                padding-left: 24px;
+                                background-position: 80% 50%;
+                            }
+                            .uk {
+                                background: url('../img/uk.png') no-repeat;
+                                background-size: 20px;
+                                padding-left: 24px;
+                                background-position: 80% 50%;
+                            }
+                            select.ru,
+                            select.uk {
+                                padding-top: 2px;
+                                padding-bottom: 3px;
+                                padding-left: 16px;
+                                background-position: 80% 50%;
+                            }
 
                     .font_2 {
                         font-size: 12px;
