--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,18 @@
+/*
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: none; */
-}
-/* html {
+} */
 
+html {
+    box-sizing: border-box;
 }
 *, *::before, *::after {
     box-sizing: inherit;
-} */
+    margin: 0;
+    padding: 0;
+}
 
 body {
     font-family: Montserrat;
@@ -128,6 +131,8 @@ body {
                         height: 172px;
                         margin: 52px auto;
                         z-index: 1000;
+
+                        position: relative;
                     }
                         input {
                             margin: 10px 0 10px 0;
@@ -146,31 +151,46 @@ body {
                             .inp_2 {
                                 width: 184px;
                             }
-                            .language {
+                            .select-events {
                                 margin-left: 20px;
-                                width: 112px;
-                                height: 50px;
+                                width: 117px;
+
                                 font-weight: 600;
                                 font-size: 14px;
+
+                                position: absolute;
+                                border: 1px solid rgba(228,228,228,1);
+                                border-radius: 5px;
+
+                                top: 9px;
+                                left: 183px;
                             }
                             .ru {
                                 background: url('../img/russia.png') no-repeat;
-                                background-size: 20px;
-                                padding-left: 24px;
+                                background-size: 26px;
+                                padding-left: 20px;
                                 background-position: 80% 50%;
+
+                                /* height: 50px; */
                             }
                             .uk {
                                 background: url('../img/uk.png') no-repeat;
-                                background-size: 20px;
-                                padding-left: 24px;
+                                background-size: 26px;
+                                padding-left: 20px;
+
                                 background-position: 80% 50%;
                             }
                             select.ru,
                             select.uk {
-                                padding-top: 2px;
-                                padding-bottom: 3px;
+                                padding-top: 15px;
+                                padding-bottom: 15px;
                                 padding-left: 16px;
-                                background-position: 80% 50%;
+                                background-position: 65% 50%;
+
+                                background-color: rgba(248,248,248,1);
+                            }
+                            .wrapper-lastLine {
+                                position: absolute;
                             }
 
                     .font_2 {
